* fwprop.c (forward_propagate_and_simplify): Replace entire var location rtx.  Revert part of 2007-11-08 obviated by: 2008-04-02  Andy Hutchinson <hutchinsonamdy@aim.com> PR rtl-optimization/35542 * fwprop.c (forward_propagate_and_simplify): Replace loc_reg_mentioned_in_p with reg_mentioned_p.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/var-tracking-assignments-branch@134782 138bc75d-0d04-0410-961f-82ee72b054a4