gcc/fwprop.c
@@ -859,15 +859,8 @@ forward_propagate_and_simplify (struct df_ref *use, rtx def_insn, rtx def_set)
     }
   else if (!use_set)
     {
-      loc = DF_REF_LOC (use);
+      loc = &INSN_VAR_LOCATION_LOC (use_insn);
       set_reg_equal = false;
-
-      if (GET_MODE (reg) != GET_MODE (src))
-	{
-	  gcc_assert (GET_CODE (src) == CONST_INT
-		      || GET_CODE (src) == CONST_DOUBLE);
-	  src = gen_rtx_CONST (GET_MODE (reg), src);
-	}
     }
   else
     {
@@ -893,6 +886,9 @@ forward_propagate_and_simplify (struct df_ref *use, rtx def_insn, rtx def_set)
 
   if (!new)
     return false;
+
+  if (mode != GET_MODE (new))
+    new = wrap_constant (mode, new);
 
   return try_fwprop_subst (use, loc, new, def_insn, set_reg_equal);
 }
@@ -936,7 +932,7 @@ forward_propagate_into (struct df_ref *use)
   else
     parent = PATTERN (use_insn);
 
-  if (!loc_mentioned_in_p (DF_REF_LOC (use), parent))
+  if (!reg_mentioned_p (DF_REF_REG (use), parent))
     return;
 
   def_insn = DF_REF_INSN (def);
